fix layout bug

--- a/src/app/components/user-info/user-info.scss
+++ b/src/app/components/user-info/user-info.scss
@@ -45,7 +45,7 @@
 }
 
 .content {
-  @media (min-width: 144px) {
+  @media (min-width: 1440px) {
     display: flex;
     justify-content: space-between;
     gap: 2rem;
